  algorithm Zstandard by default.

- BLAKE2b is now used instead of MD4 for hashing input.

- Added checksumming of result files using XXH64 to detect data corruption.

- Made the hard link mode less error prone.

- Added opt-in support for using file cloning (on Btrfs/XFS/APFS) to copy data
  to and from the cache.

- A C++11 compiler is now required to build ccache.

- There is a new -x/--show-compression option which shows some statistics about
  cache compression.

- A progress bar has been added to show the progress of time-consuming
  options like -c/--cleanup, -C/--clear and -x/--show-compression.

- (More to be written.)


ccache 3.7.5
------------
Release date: TBD

New features
~~~~~~~~~~~~

- Added support for `-MF=arg` (with an extra equal sign) as understood by
  EDG-based compilers.


Bug fixes
~~~~~~~~~

- Fixed a regression in 3.7.2 that could result in a warning message instead of
  an error in an edge case related to usage of “-Werror”.

- An implicit `-MQ` is now passed to the preprocessor only if the object file
  extension is non-standard. This should make it easier to use EDG-based
  compilers (e.g. GHS) which don’t understand `-MQ`. (This is a bug fix of the
  corresponding improvement implemented in ccache 3.4.)


ccache 3.7.4
------------
Release date: 2019-09-12

Improvements
~~~~~~~~~~~~

- Added support for the `-gz[=type]` compiler option (previously ccache would
  think that “-gz” alone would enable debug information, thus potentially
  including the current directory in the hash).

- Added support for converting paths like “/c/users/...” into relative paths on
  Windows.


ccache 3.7.3
------------
Release date: 2019-08-17

Bug fixes
~~~~~~~~~

- The cache size (which is counted in “used disk blocks”) is now correct on
  filesystems that use more or less disk blocks than conventional filesystems,
  e.g. ecryptfs or btrfs/zfs with transparent compression. This also fixes a