@@ -173,6 +173,17 @@ compiler options apply and you should refer to the compiler's documentation.
     COMPRESSION>> for more information. This can potentionally take a long time
     since all files in the cache need to be visited.
 
+*`-X, --recompress`*=_LEVEL_::
+
+    Recompress the cache using compression level _LEVEL_. The level can be an
+    integer, with the same semantics as the
+    <<config_compression_level,*compression_level*>> configuration setting), or
+    the special value *uncompressed* for no compression. See
+    <<_cache_compression,CACHE COMPRESSION>> for more information. This can
+    potentionally take a long time since all files in the cache need to be
+    visited. Only files that are currently compressed with a different level
+    than _LEVEL_ will be recompressed.
+
 *`-s, --show-stats`*::
 
     Print a summary of configuration and statistics counters in human-readable
@@ -389,9 +400,9 @@ Semantics of *compression_level*:
 *> 0*::
     A positive value corresponds to normal Zstandard compression levels. Lower
     levels (e.g. *1*) mean faster compression but worse compression ratio.
-    Higher levels (e.g. *19*) mean slower compression but better compression
-    ratio. The maximum possible value depends on the libzstd version.
-    Decompression speed is essentially the same for all levels.
+    Higher levels (e.g. *19*) mean slower compression but better
+    compression ratio. The maximum possible value depends on the libzstd
+    version. Decompression speed is essentially the same for all levels.
 *< 0*::
     A negative value corresponds to Zstandard's “ultra-fast” compression
     levels, which are even faster than level 1 but less good compression
@@ -763,7 +774,7 @@ Cache compression
 -----------------
 
 ccache will by default compress all data it puts into the cache using the
-compression algorithm Zstandard (zstd) using compression level 1. The algorithm
+compression algorithm Zstandard (zstd) using compression level -1. The algorithm
 is fast enough that there should be little reason to turn off compression to
 gain performance. One exception is if the cache is located on a compressed file
 system, in which case the compression performed by ccache of course is
@@ -771,14 +782,14 @@ redundant. See the documentation for the <<config_compression,*compression*>>
 and <<config_compression_level,*compression_level*>> settings for more
 information.
 
-You can use *ccache -x/--show-compression* to print information related to
+You can use the *-x/--show-compression* option to print information related to
 compression. Example:
 
 -------------------------------------------------------------------------------
 Total data:              14.8 GB (16.0 GB disk blocks)
 Compressible data:       11.3 GB (30.6% of original size)
   - Original size:       36.9 GB
-  - Compression ratio:  3.267  x (69.4% space savings)
+  - Compression ratio:  3.267 x  (69.4% space savings)
 Incompressible data:      3.5 GB
 -------------------------------------------------------------------------------
 
@@ -794,6 +805,16 @@ Notes:
   files created by older ccache versions).
 * The compression ratio is affected by the
   <<config_compression_level,*compression_level*>> setting.
+
+The cache data can also be recompressed to another compression level (or made
+uncompressed) with the *-X/--recompress* option. If you choose to disable
+compression by default or to use a low compression level, you can (re)compress
+newly cached data with a higher compression level after the build or at another
+time when there are more CPU cycles available, for instance every night. Full
+recompression potentially takes a lot of time, but only files that are
+currently compressed with a different level than the target level will be
+recompressed.
+
 
 Cache statistics
 ----------------
